--- a/src/pages/DailyTransactionsPage.css
+++ b/src/pages/DailyTransactionsPage.css
@@ -1,7 +1,7 @@
 /* src/pages/DailyTransactionsPage.css */
 
 /* Overall Page Styles */
-.daily-transactions-page {
+.performance-page {
   display: flex;
   background-color: #000; /* Black background */
   color: #ffffff; /* White text color for better contrast */
@@ -48,11 +48,12 @@
 
 .transactions-header .description {
   margin-top: -5px;
+  margin-right: 10px; /* Added to shift the description to the right */
   font-size: 1rem;
   color: #cccccc;
-  margin-right: 23px;
 }
 
+/* RaaS Dropdown */
 .raas-dropdown select {
   background-color: #1c1c1c;
   color: #ffffff;
